added js functionalities

--- a/saved.html
+++ b/saved.html
@@ -207,18 +207,17 @@
           </div>
           <p class="validation">Type at least 3 characters</p>
         </div>
-
         <!-- main and aside -->
         <div class="mainwithaside">
           <main class="main">
-            <div class="total_tools"><span id="total"></span> tools</div>
+            <div class="total_tools"><span>Saved</span> tools</div>
             <!-- filter buttons -->
             <div class="filters">
               <div class="saved_wraper">
-                <a href="./saved.html"
+                <a href="./index.html"
                   ><div class="saved">
                     <img
-                      src="https://gist.githack.com/ManojSreekumarK/c910dfc0bde5ceb9f29960ae524a9aa7/raw/e6898b177645160c1d46e14826400dc05ca2a365/bookmark2.svg"
+                      src="https://gist.githack.com/ManojSreekumarK/9517e02e360a00c43b9a0823eb611ee8/raw/3b19a947877d131ae21178cdb22992f7a47901f6/uturn.svg"
                       alt="saved"
                     /></div
                 ></a>
@@ -238,10 +237,8 @@
               <div class="space"></div>
             </div>
             <!--tool cards on left -->
-            <section class="tool_cards"></section>
-            <section id="productcard"></section>
+            <section class="saved_cards"></section>
           </main>
-
           <!-- aside -->
           <aside class="aside">
             <div class="aside_header">
@@ -287,7 +284,6 @@
         </div>
       </div>
     </div>
-
     <script src="./script.js"></script>
   </body>
 </html>
