removed saved.html

--- a/index.html
+++ b/index.html
@@ -215,13 +215,12 @@
             <!-- filter buttons -->
             <div class="filters">
               <div class="saved_wraper">
-                <a href="./saved.html"
-                  ><div class="saved">
-                    <img
-                      src="https://gist.githack.com/ManojSreekumarK/c910dfc0bde5ceb9f29960ae524a9aa7/raw/e6898b177645160c1d46e14826400dc05ca2a365/bookmark2.svg"
-                      alt="saved"
-                    /></div
-                ></a>
+                <div class="saved">
+                  <img
+                    src="https://gist.githack.com/ManojSreekumarK/c910dfc0bde5ceb9f29960ae524a9aa7/raw/e6898b177645160c1d46e14826400dc05ca2a365/bookmark2.svg"
+                    alt="saved"
+                  />
+                </div>
               </div>
 
               <button class="filterbtn">All</button
@@ -239,6 +238,7 @@
             </div>
             <!--tool cards on left -->
             <section class="tool_cards"></section>
+            <section class="saved_cards"></section>
             <section id="productcard"></section>
           </main>
 
