added filter scroll on mobile view

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           <main class="main">
             <div class="total_tools"><span id="total"></span> tools</div>
             <!-- filter buttons -->
-            <div class="filters">
+            <div class="filterwaraper">
               <div class="saved_wraper">
                 <div class="saved">
                   <img
@@ -223,20 +223,22 @@
                   />
                 </div>
               </div>
-
-              <button class="filterbtn">All</button
-              ><button class="filterbtn">Office platforms</button
-              ><button class="filterbtn">Advanced settings</button
-              ><button class="filterbtn">Data</button
-              ><button class="filterbtn">
-                <span>More</span>
-                <img
-                  src="https://gist.githack.com/ManojSreekumarK/6c2a9d8262837eadecf1b00a249dec40/raw/b5dda76f173a79bc720aeb019349005e385d7f13/dots.svg"
-                  alt="vertical menu"
-                />
-              </button>
-              <div class="space"></div>
+              <div class="filters">
+                <button class="filterbtn">All</button
+                ><button class="filterbtn">Office platforms</button
+                ><button class="filterbtn">Advanced settings</button
+                ><button class="filterbtn">Data</button
+                ><button class="filterbtn">
+                  <span>More</span>
+                  <img
+                    src="https://gist.githack.com/ManojSreekumarK/6c2a9d8262837eadecf1b00a249dec40/raw/b5dda76f173a79bc720aeb019349005e385d7f13/dots.svg"
+                    alt="vertical menu"
+                  />
+                </button>
+                <div class="space"></div>
+              </div>
             </div>
+
             <!--tool cards on left -->
             <section class="tool_cards"></section>
             <section class="saved_cards"></section>
